--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <!DOCTYPE html>
   <html>
   <head>
-    <link rel="stylesheet" href="th.css">
+    <link rel="stylesheet" href="style.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
   <body>
@@ -96,6 +96,6 @@
       <p id="text16">Flyers,mailers& posters</p>
     </div> 
   </div>
-  <script src="th.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
